small improvements in core